Bug 239701 - Images with mask of alpha depth 1 display incorrectly. r=sfraser,sr=tor,a=chofmann